<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".SignUpActivity"
    >

    <ImageView
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:src="@drawable/f"
        android:scaleType="centerCrop"
        />

    <LinearLayout
        android:layout_width="match_parent"
        android:orientation="vertical"
        android:background="#D8ACA4A4"
        android:gravity="center"
        android:layout_height="match_parent">

        <ImageView
            android:layout_width="200dp"
            android:layout_height="75dp"
            android:src="@drawable/logo_urjc"
            android:layout_marginBottom="50dp"
            />
        <EditText
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:id="@+id/edit_name_sig"
            android:hint="Nombre"
            android:inputType="text"
            android:layout_marginBottom="15dp"
            android:textColor="#fff"
            android:layout_marginLeft="20dp"
            android:layout_marginRight="20dp"
            android:background="@drawable/input"
            android:paddingLeft="20dp"
            android:paddingRight="10dp"
            android:paddingTop="10dp"
            android:paddingBottom="10dp"
            android:textColorHint="#ccc"/>
        <EditText
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:id="@+id/edit_lastnames_sig"
            android:hint="Apellido"
            android:inputType="text"
            android:layout_marginBottom="15dp"
            android:textColor="#fff"
            android:layout_marginLeft="20dp"
            android:layout_marginRight="20dp"
            android:background="@drawable/input"
            android:paddingLeft="20dp"
            android:paddingRight="10dp"
            android:paddingTop="10dp"
            android:paddingBottom="10dp"
            android:textColorHint="#ccc"/>

        <EditText
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:id="@+id/edit_email_sig"
            android:hint="Correo electrónico"
            android:inputType="textEmailAddress"
            android:layout_marginBottom="15dp"
            android:textColor="#fff"
            android:layout_marginLeft="20dp"
            android:layout_marginRight="20dp"
            android:background="@drawable/input"
            android:paddingLeft="20dp"
            android:paddingRight="10dp"
            android:paddingTop="10dp"
            android:paddingBottom="10dp"
            android:textColorHint="#ccc"/>


        <EditText
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:id="@+id/edit_pass_sig"
            android:hint="Contraseña"
            android:layout_marginBottom="15dp"
            android:layout_marginLeft="20dp"
            android:layout_marginRight="20dp"
            android:background="@drawable/input"
            android:paddingLeft="20dp"
            android:paddingRight="10dp"
            android:paddingTop="10dp"
            android:paddingBottom="10dp"
            android:textColorHint="#ccc"
            android:textColor="#fff"
            android:inputType="textPassword"/>

        <EditText
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:id="@+id/edit_confirm_pass_sig"
            android:hint="Confirma contraseña"
            android:layout_marginBottom="15dp"
            android:layout_marginLeft="20dp"
            android:layout_marginRight="20dp"
            android:background="@drawable/input"
            android:paddingLeft="20dp"
            android:paddingRight="10dp"
            android:paddingTop="10dp"
            android:paddingBottom="10dp"
            android:textColorHint="#ccc"
            android:textColor="#fff"
            android:inputType="textPassword"/>

        <Button
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginBottom="30dp"
            android:id="@+id/button_sign"
            android:layout_marginLeft="20dp"
            android:layout_marginRight="20dp"
            android:background="@drawable/btn_fondo_color"
            android:text="CREAR CUENTA"
            android:textColor="#fff"
            android:textSize="16sp"
            android:elevation="5dp"/>
        <LinearLayout
            android:layout_width="match_parent"
            android:orientation="horizontal"
            android:layout_marginRight="20dp"
            android:layout_marginLeft="20dp"
            android:gravity="center"
            android:layout_height="wrap_content">

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="¿Ya tienes cuenta?"
                android:textSize="15sp"
                android:textColor="#fff"
                />
            <Button
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="Iniciar Sesión"
                android:id="@+id/button_log_sign"
                android:background="@android:color/transparent"
                android:layout_marginLeft="10dp"
                android:textColor="#fff"/>

        </LinearLayout>

    </LinearLayout>

</RelativeLayout>
